# sidestep

./: .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  charter.md  deny.toml  justfile  lefthook.yml
.claude/rules/: _index.md  cli-philosophy.md  kos-commits.md  rust.md
.github/: dependabot.yml
.github/workflows/: alpha.yml  audit.yml  ci.yml  dependency-review.yml  release-verify.yml  release.yml  scorecards.yml
Formula/: sidestep-a.rb  sidestep.rb
_kos/: kos.yaml
_kos/findings/: finding-001-primitives-over-composites.md  finding-002-abusive-argument-pattern.md  finding-003-owner-customer-resolution-shipped.md  finding-004-base-url-override-and-wiremock-harness.md  finding-005-chain-naming-error.md  finding-006-v01-primitive-layer-shipped.md
_kos/nodes/bedrock/: elem-action-item-schema.yaml  elem-audit-trail-schema.yaml  elem-auth-three-layer.yaml  elem-codegen-via-progenitor.yaml  elem-primitives-over-composites.yaml  elem-sdk-backed-cli.yaml  elem-vendored-spec.yaml  elem-wiremock-integration-harness.yaml  val-evidence-driven-design.yaml  val-resolution-chain.yaml  val-schema-aware-over-sugar.yaml
_kos/nodes/frontier/: question-action-item-schema.yaml  question-audit-mining.yaml  question-curated-cli-verbs.yaml  question-distribution.yaml  question-permissions-model.yaml
_kos/nodes/graveyard/: grv-curated-cli-verbs.yaml  grv-raw-http-escape.yaml
_kos/probes/: brief-primitive-layer-v01.md
crates/sidestep-api/: Cargo.toml
crates/sidestep-api/src/: generated.rs  lib.rs
crates/sidestep-cli/: Cargo.toml
crates/sidestep-cli/src/: main.rs
crates/sidestep-cli/tests/: audit_v2.rs  auth_chain.rs  emit.rs  enrich.rs  filter.rs  get_search_limit_since.rs  wiremock_endpoint.rs
crates/sidestep-mcp/: Cargo.toml
crates/sidestep-mcp/src/: lib.rs
crates/sidestep-sdk/: Cargo.toml
crates/sidestep-sdk/src/: audit.rs  auth.rs  cel.rs  client.rs  enrich.rs  error.rs  kinds.rs  lib.rs  redact.rs  spec.rs  stream.rs
docs/: audit-trail-format.md
docs/research/: action-item-schema.md  noun-inventory.md  stepsecurity-llms-full.txt  value-propositions.md
examples/: Makefile  README.md
examples/asserts/: 01-round-trip.sh  02-cross-kind-enrich.sh  03-rank-stability.sh
examples/fixtures/: audit-log.jsonl  detection.jsonl  policy.jsonl  rule.jsonl  run.jsonl
examples/recipes/: README.md  changed-pinning.sh  inventory.sh  orient.sh  triage.sh  verify.sh
spec/: stepsecurity-v1.yaml  stepsecurity-v1.yaml.sha256
xtask/: Cargo.toml
xtask/src/: main.rs
