[workspace]
resolver = "2"
members = [
    "crates/sidestep-api",
    "crates/sidestep-sdk",
    "crates/sidestep-cli",
    "crates/sidestep-mcp",
    "xtask",
]

[workspace.package]
version = "0.0.1"
edition = "2024"
rust-version = "1.85"
license = "MIT"
repository = "https://github.com/ArcavenAE/sidestep"
authors = ["Arcaven AE"]

[workspace.dependencies]
# Core
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v7", "serde"] }
openapiv3 = "2"

# Errors, logging
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Async + HTTP
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs", "io-util", "signal"] }
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls", "stream"] }
futures = { version = "0.3", default-features = false, features = ["std", "async-await"] }

# CLI + config
clap = { version = "4", features = ["derive", "env", "wrap_help"] }
clap_complete = "4"
figment = { version = "0.10", features = ["toml", "env"] }
toml = "1"
dirs = "6"
keyring = { version = "3", features = ["apple-native", "linux-native"] }

# Codegen runtime (progenitor's runtime crate, used by sidestep-api)
progenitor-client = "0.14"
bytes = "1"

# Misc utilities used in the SDK
sha2 = "0.10"
urlencoding = "2"

# Predicate language for `sidestep filter --where '<CEL>'`
cel-interpreter = { version = "0.10", default-features = false, features = ["chrono", "json"] }

# Tests
wiremock = "0.6"
insta = { version = "1", features = ["json"] }
assert_cmd = "2"
predicates = "3"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"
