[package]
name = "xtask"
version = "0.0.0"
edition = "2024"
rust-version = "1.85"
license = "MIT"
publish = false

[[bin]]
name = "xtask"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
sha2 = "0.10"
hex = "0.4"
regex = "1"
