[package]
name = "xtask"
version = "0.0.0"
edition = "2024"
rust-version = "1.85"
license = "MIT"
publish = false

[[bin]]
name = "xtask"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.13", default-features = false, features = ["blocking", "rustls"] }
sha2 = "0.10"
hex = "0.4"
regex = "1"

# Codegen pipeline (xtask regen)
progenitor = "0.14"
openapiv3 = "2"
serde_yaml = "0.9"
syn = { version = "2", features = ["full"] }
prettyplease = "0.2"
